--- a/assets/scss/blocks/search.scss
+++ b/assets/scss/blocks/search.scss
@@ -3,7 +3,8 @@
     display: flex;
     align-items: center;
 
-    #college-search {
+    #college-search,
+    #college-search-mobile {
         width: 100%;
         padding: 10px;
         padding-left: 35px;
